--- a/deployment.yaml
+++ b/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: jenkins-java-demo
-        image: IMAGE
+        image: openjdk:8-jdk-slim
         imagePullPolicy: Always
         ports:
         - containerPort: 8080
